...
                    <toolbarItems/>
                    <navigationItem key="navigationItem" title="Triggerdagbok" id="WC0-P5-OJ3">
                        <barButtonItem key="leftBarButtonItem" title="Avbryt" id="yuv-RT-Jin">
                            <connections>
                                <action selector="cancel:" destination="g8v-Ey-IpG" id="sga-yY-1ut"/>
                            </connections>
                        </barButtonItem>
                        <barButtonItem key="rightBarButtonItem" title="Lagre" id="cLS-9E-IBu">
                            <connections>
                                <action selector="saveTriggerDiary:" destination="g8v-Ey-IpG" id="TbX-lj-6Kz"/>
...
                                                </connections>
                                            </view>
                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Tid siden du startet programmet" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1ut-QY-Mhl">
                                                <rect key="frame" x="20" y="16" width="374" height="16"/>
                                                <fontDescription key="fontDescription" type="system" pointSize="13"/>
...
                        </constraints>
                    </view>
                    <navigationItem key="navigationItem" title="Hjem" id="lsR-5g-fRj">
                        <barButtonItem key="leftBarButtonItem" image="settings" id="nf8-vL-C8h">
                            <connections>
                                <action selector="settingsAction:" destination="TWW-3s-sOF" id="3yi-Yc-P14"/>
...
                                                    </constraints>
                                                </imageView>
                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Små milepæler" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="BaV-1t-Fg0">
                                                    <rect key="frame" x="46" y="15" width="287" height="21"/>
                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
...
                                                    </constraints>
                                                </imageView>
                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Store milepæler" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Vcz-RX-7AF">
                                                    <rect key="frame" x="46" y="15" width="287" height="21"/>
                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
...
                                                    </constraints>
                                                </imageView>
                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Økonomiske prestasjoner" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="moP-Wg-8Zb">
                                                    <rect key="frame" x="46" y="15" width="287" height="21"/>
                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
...
                                                    </constraints>
                                                </imageView>
                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Helseprestasjoner" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="OQV-pk-hVJ">
                                                    <rect key="frame" x="46" y="15" width="287" height="21"/>
                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
...
                        </connections>
                    </tableView>
                    <navigationItem key="navigationItem" title="Varslingsinnstillinger" id="hpx-Vo-zCJ">
                        <barButtonItem key="leftBarButtonItem" title="Avbryt" id="CA7-My-oTy">
                            <connections>
...
                        </connections>
                    </tableView>
                    <navigationItem key="navigationItem" title="Prestasjoner" id="Pdf-HZ-hfh">
                        <barButtonItem key="leftBarButtonItem" image="settings" id="InA-hX-CIL">
                            <connections>
...
                                            <autoresizingMask key="autoresizingMask"/>
                                            <subviews>
                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Tilbakestill klokken" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="vh7-uo-1lk">
                                                    <rect key="frame" x="16" y="15" width="144" height="20.666666666666664"/>
                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
...
                                            <autoresizingMask key="autoresizingMask"/>
                                            <subviews>
                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Tilbakestill positive triggere" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="zBU-rM-4aC">
                                                    <rect key="frame" x="16" y="15" width="209.66666666666666" height="20.666666666666664"/>
                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
...
                                            <autoresizingMask key="autoresizingMask"/>
                                            <subviews>
                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Tilbakestill negative triggere" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ElX-gu-f6B">
                                                    <rect key="frame" x="16" y="15" width="215" height="20.666666666666664"/>
                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
...
