...
        let alertController = UIAlertController(title: nil, message: nil, preferredStyle: .actionSheet)
        if let popover = alertController.popoverPresentationController { //for ipad
            popover.barButtonItem = sender
            popover.permittedArrowDirections = .any
        }
        
        alertController.addAction(UIAlertAction(title: "Om Applikasjonen", style: .default, handler: { _ in self.navigateToAboutViewController() }))
        alertController.addAction(UIAlertAction(title: "Varslingsinnstillinger", style: .default, handler: { _ in self.navigateToSettingsViewController() }))
        alertController.addAction(UIAlertAction(title: "Tilbakestilling", style: .destructive, handler: { _ in self.navigateToResetViewController()}))
        alertController.addAction(UIAlertAction(title: "Avbryt", style: .cancel, handler: nil))
        
        present(alertController, animated: true, completion: nil)
    }
    
    fileprivate func navigateToAboutViewController() {
...
